<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_note_edit_save"
        android:showAsAction="always"
        android:title="@string/save">
    </item>
    <item
        android:id="@+id/menu_note_edit_cancel"
        android:showAsAction="always"
        android:title="@string/cancel">
    </item>
    <item
        android:id="@+id/menu_note_operation"
        android:icon="@drawable/ic_action_overflow"
        android:showAsAction="always"
        android:title="@string/more">
        <menu>
            <item
                android:id="@+id/menu_note_invite_people"
                android:title="@string/invite">
            </item>
            <item
                android:id="@+id/menu_note_forward_asmail"
                android:title="@string/forward_as_email">
            </item>
            <item
                android:id="@+id/menu_note_mark_asdone"
                android:title="@string/mark_as_done"/>
            <item
                android:id="@+id/menu_note_mark_asopen"
                android:title="@string/mark_as_open"/>
            <item
                android:id="@+id/menu_note_edit"
                android:title="@string/edit_note">
            </item>
            <item
                android:id="@+id/menu_note_delete"
                android:title="@string/delete_note">
            </item>
        </menu>
    </item>

</menu>