<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_message_compose_add_attachment"
        android:icon="@drawable/ic_action_attachment"
        android:showAsAction="ifRoom|withText"
        android:title="@string/add_attachment">
        <menu>
            <item
                android:id="@+id/menu_message_compose_add_attachment_images"
                android:showAsAction="always"
                android:title="@string/attach_image">
            </item>
            <item
                android:id="@+id/menu_message_compose_add_attachment_files"
                android:showAsAction="always"
                android:title="@string/attach_file">
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/menu_message_compose_send"
        android:icon="@drawable/ic_action_send_now"
        android:showAsAction="ifRoom|withText"
        android:title="@string/send">
    </item>

</menu>